--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <label for="bu">burger Name:</label>
-    <input type="text" id="bu" name="name">
+    <input type="text" id="bu" name="bu">
   </div>
 
   <div class="form-group">
