--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
 <h1>Burgers!</h1>
 
+<div class='burger-block'>
+
 <h2>Burgers that are not devoured!</h2>
 
 <ul>
@@ -10,15 +12,22 @@
   {{/each}}
 </ul>
 
+
+</div>
+
+<div class='burger-block'>
+
 <h2>Burgers that are devoured!</h2>
 
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
-    {{/if}}
-  {{/each}}
-</ul>
+  <ul>
+    {{#each burgers}}
+      {{#if devoured}}
+        {{> burgers/burger-block devoured=false}}
+      {{/if}}
+    {{/each}}
+  </ul>
+
+</div>
 
 <h2>Add a burger</h2>
 <form class="create-form">
