Adds bootstrap, begins formatting

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-		<link rel="stylesheet" href="./assets/css/burger_style.css" type="text/css" />
+
+	<head>
+		<meta charset="UTF-8">
 		<title>Eat Da Burger!</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="./assets/css/burger_style.css" type="text/css" />
 		<script src="./assets/js/burgers.js"></script>
 	</head>
+
 	<body>
+		<div class='jumbotron'>
+			<h1 class='display-4'>Burgers!</h1>
+			<p>Record burgers that you plan to eat! Then eat them!</p>
+		</div>
 		{{{ body }}}
 	</body>
+
 </html>
