--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+	<button class="change-devoured btn btn-primary float-right" data-id="{{id}}" data-newdevoured="{{devoured}}">
 		{{#if devoured}}MEAL TIME!{{else}}SECONDS!{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-burger btn btn-primary float-right" data-id="{{this.id}}">DELETE!</button>
 </li>
