--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,61 @@
-<h1>Burgers!</h1>
+<div class='row'>
+  <div class='col-md-1'></div>
+  <div class='col-md-5'>
+    <div class='burger-block'>
 
-<div class='burger-block'>
+      <h2>Burgers that are not devoured!</h2>
 
-  <h2>Burgers that are not devoured!</h2>
+      <ul>
+        {{#each burgers}}
+          {{#unless devoured}}
+            {{> burgers/burger-block devoured=true}}
+          {{/unless}}
+        {{/each}}
+      </ul>
 
-  <ul>
-    {{#each burgers}}
-      {{#unless devoured}}
-        {{> burgers/burger-block devoured=true}}
-      {{/unless}}
-    {{/each}}
-  </ul>
+    </div>
+  </div>
+  <div class='col-md-5'>
+    <div class='burger-block'>
 
+      <h2>Burgers that are devoured!</h2>
 
+      <ul>
+        {{#each burgers}}
+          {{#if devoured}}
+            {{> burgers/burger-block devoured=false}}
+          {{/if}}
+        {{/each}}
+      </ul>
+
+    </div>
+  </div>
+  <div class='col-md-1'></div>
 </div>
 
-<div class='burger-block'>
+<div class='row'>
+  <div class='col-md-4'></div>
+  <div class='col-md-4'>
+  
+    <h2>Add a burger</h2>
+  
+    <form class="create-form">
+     
+      <div class="form-group">
+        <label for="burger-name">Burger Name:</label>
+        <input type="text" id="burger-name" name="burger-name">
+      </div>
 
-  <h2>Burgers that are devoured!</h2>
+      <div class="form-group">
+        <label for="devoured">Devoured?</label><br>
+        <input type="radio" name="devoured" value="1"> Devoured!<br>
+        <input type="radio" name="devoured" value="0" checked> Uneaten
+      </div>
 
-  <ul>
-    {{#each burgers}}
-      {{#if devoured}}
-        {{> burgers/burger-block devoured=false}}
-      {{/if}}
-    {{/each}}
-  </ul>
+      <button class='btn btn-primary' type="submit">Add burger</button>
 
+    </form>
+
+  </div>
+  <div class='col-md-4'></div>
 </div>
-
-<h2>Add a burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="burger-name">Burger Name:</label>
-    <input type="text" id="burger-name" name="burger-name">
-  </div>
-
-  <div class="form-group">
-    <label for="devoured">Devoured?</label><br>
-    <input type="radio" name="devoured" value="1"> Devoured!<br>
-    <input type="radio" name="devoured" value="0" checked> Uneaten
-  </div>
-
-  <button type="submit">Add burger</button>
-</form>
