--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,9 @@
   <div class='col-md-5'>
     <div class='burger-block'>
 
-      <h2>Burgers that are not devoured!</h2>
+      <h2>!</h2>
 
-      <ul>
+      <ul class='list-unstyled'>
         {{#each burgers}}
           {{#unless devoured}}
             {{> burgers/burger-block devoured=true}}
@@ -20,7 +20,7 @@
 
       <h2>Burgers that are devoured!</h2>
 
-      <ul>
+      <ul class='list-unstyled'>
         {{#each burgers}}
           {{#if devoured}}
             {{> burgers/burger-block devoured=false}}
@@ -31,31 +31,4 @@
     </div>
   </div>
   <div class='col-md-1'></div>
-</div>
-
-<div class='row'>
-  <div class='col-md-4'></div>
-  <div class='col-md-4'>
-  
-    <h2>Add a burger</h2>
-  
-    <form class="create-form">
-     
-      <div class="form-group">
-        <label for="burger-name">Burger Name:</label>
-        <input type="text" id="burger-name" name="burger-name">
-      </div>
-
-      <div class="form-group">
-        <label for="devoured">Devoured?</label><br>
-        <input type="radio" name="devoured" value="1"> Devoured!<br>
-        <input type="radio" name="devoured" value="0" checked> Uneaten
-      </div>
-
-      <button class='btn btn-primary' type="submit">Add burger</button>
-
-    </form>
-
-  </div>
-  <div class='col-md-4'></div>
 </div>
