Finishes app. Adds picture and more styling.

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -18,6 +18,10 @@ li {
   margin-bottom: 5px;
 }
 
-.burger-block {
-  display: inline-block;
+#burger-image {
+  width: 100px;
+}
+
+#burger-form {
+  
 }
