--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
   <div class='col-md-5'>
     <div class='burger-block'>
 
-      <h2>!</h2>
+      <h2>Burgers To Eat</h2>
 
       <ul class='list-unstyled'>
         {{#each burgers}}
@@ -18,7 +18,7 @@
   <div class='col-md-5'>
     <div class='burger-block'>
 
-      <h2>Burgers that are devoured!</h2>
+      <h2>Burgers Eaten</h2>
 
       <ul class='list-unstyled'>
         {{#each burgers}}
