--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,18 +13,20 @@
 	</head>
 
 	<body class='bg-dark text-success'>
-		<div class='jumbotron bg-secondary text-light'>
+		<div class='jumbotron bg-success text-dark text-center'>
+
+			<img src='./assets/img/burger.png' id='burger-image'>
 
 			<h1 class='display-4'>Burgers!</h1>
 
 			<p>Record burgers that you plan to eat! Then eat them!</p>
 
-			<form class="create-form">
+			<form class="create-form form-inline justify-content-center">
 
-      <div class="input-group input-group-lg mb-3">
+      <div id='burger-form' class="input-group input-group-lg mb-3 w-50">
         <input type="text" id='burger-name' class='form-control' name='burger-name' placeholder='Add New Burger' aria-label="New Burger" aria-describedby="basic-addon2">
         <div class="input-group-append">
-          <button class="btn btn-success" type="submit"><i class="fa fa-plus"></i></button>
+          <button class="btn btn-dark" type="submit"><i class="fa fa-plus"></i></button>
         </div>
       </div>
 
