One last copy edit

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,9 +17,9 @@
 
 			<img src='./assets/img/burger.png' id='burger-image'>
 
-			<h1 class='display-4'>Burgers!</h1>
+			<h1 class='display-5'>Humans Like Burgers!</h1>
 
-			<p>Record burgers that you plan to eat! Then eat them!</p>
+			<p class='w-50 mx-auto lead'>Record burgers that you plan to eat, then eat them. If you liked it, return it to the list for seconds.</p>
 
 			<form class="create-form form-inline justify-content-center">
 
